feat: CRUD completo para tipo-estado  udistrital/sga_documentacion#346
