# src/controllers/tipo_estado.controller.ts
@@ -1,4 +1,108 @@
-import { Controller } from '@nestjs/common';
+import { Body, Controller, Delete, Get, HttpStatus, Param, Post, Put, Query, Res } from '@nestjs/common';
+import { ApiTags } from '@nestjs/swagger';
+import { FilterDto } from 'src/filters/dto/filter.dto';
+import { TipoEstadoDto } from 'src/models/tipo_estado.dtoSchema';
+import { TipoEstadoService } from 'src/services/tipo_estado.service';
 
+@ApiTags('tipo-estado')
 @Controller('tipo-estado')
-export class TipoEstadoController {}
+export class TipoEstadoController {
+    constructor(
+        private readonly tipoEstadoService: TipoEstadoService
+    ){}
+
+    @Post()
+    async post(@Res() res, @Body() tipoEstadoDto: TipoEstadoDto) {
+        this.tipoEstadoService.post(tipoEstadoDto).then(preinscripciones => {
+            res.status(HttpStatus.CREATED).json({
+                Success: true,
+                Status: HttpStatus.CREATED,
+                Message: 'Registration successful',
+                Data: preinscripciones
+            })
+        }).catch(error => {
+            res.status(HttpStatus.BAD_REQUEST).json({
+                Success: false,
+                Status: HttpStatus.BAD_REQUEST,
+                Message: 'Error service Post: The request contains an incorrect data type or an invalid parameter',
+                Data: error.message
+            })
+        });
+    }
+
+    @Get()
+    async getAll(@Res() res, @Query() filterDto: FilterDto) {
+        this.tipoEstadoService.getAll(filterDto).then(tipoEstado => {
+            res.status(HttpStatus.OK).json({
+                Success: true,
+                Status: HttpStatus.OK,
+                Message: 'Request successful',
+                Data: tipoEstado
+            })
+        }).catch(error => {
+            res.status(HttpStatus.NOT_FOUND).json({
+                Success: false,
+                Status: HttpStatus.NOT_FOUND,
+                Message: 'Error service GetAll: The request contains an incorrect parameter or no record exist',
+                Data: error.message
+            })
+        })
+    }
+
+    @Get('/:_id')
+    async getById(@Res() res, @Param('_id') _id: string) {
+        this.tipoEstadoService.getById(_id).then(tipoEstado => {
+            res.status(HttpStatus.OK).json({
+                Success: true,
+                Status: HttpStatus.OK,
+                Message: 'Request successful',
+                Data: tipoEstado
+            })
+        }).catch(error => {
+            res.status(HttpStatus.NOT_FOUND).json({
+                Success: false,
+                Status: HttpStatus.NOT_FOUND,
+                Message: 'Error service GetOne: The request contains an incorrect parameter or no record exist',
+                Data: error.message
+            })
+        })
+    }
+
+    @Put('/:_id')
+    async put(@Res() res, @Param('_id') _id: string, @Body() tipoEstadoDto: TipoEstadoDto) {
+        this.tipoEstadoService.put(_id, tipoEstadoDto).then(tipoEstado => {
+            res.status(HttpStatus.OK).json({
+                Success: true,
+                Status: HttpStatus.OK,
+                Message: 'Update successful',
+                Data: tipoEstado
+            })
+        }).catch(error => {
+            res.status(HttpStatus.BAD_REQUEST).json({
+                Success: false,
+                Status: HttpStatus.BAD_REQUEST,
+                Message: 'Error service Put: The request contains an incorrect data type or an invalid parameter',
+                Data: error.message
+            })
+        })
+    }
+
+    @Delete('/:_id')
+    async delete(@Res() res, @Param('_id') _id: string) {
+        this.tipoEstadoService.delete(_id).then(tipoEstado => {
+            res.status(HttpStatus.OK).json({
+                Success: true,
+                Status: HttpStatus.OK,
+                Message: 'Delete successful',
+                Data: tipoEstado
+            })
+        }).catch(error => {
+            res.status(HttpStatus.NOT_FOUND).json({
+                Success: false,
+                Status: HttpStatus.NOT_FOUND,
+                Message: 'Error service Delete: Request contains incorrect parameter',
+                Data: error.message
+            })
+        })
+    }
+}
